Fix for phone display
"See it on Github" button covering the textual description when viewed on a mobile device in a portrait display.

--- a/Style/responsivedesign.css
+++ b/Style/responsivedesign.css
@@ -112,7 +112,7 @@ p
   float: left;
     width: 50%;
     padding: 30px;
-    height: 450px; /* Should be removed. Only for demonstration */
+    height: 460px; /* Should be removed. Only for demonstration */
 }
 
 
